// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package fleet;

// Required by protoc-gen-go
option go_package = "infra/libs/fleet/protos/go";

import "chrome_config.proto";

message KVM {
    // serial_number or asset tag
    KVMID id = 1;
    // Descriptive name if needed
    string name = 2;
    string mac_address = 3;
    ChromePlatform platform = 4;
    int32 available_ports = 5;
}

// Refer to one port of a given KVM
message KVMInterface {
    KVMID id = 1;
    string port = 2;
}

message RPM {
    // serial_number or asset tag
    RPMID id = 1;
    // Descriptive name if needed
    string name = 2;
    string mac_address = 3;
    int32 available_ports = 4;
    // Just for record here, can be added later if needed
    // To be recorded: model, manufacturer, amperage, voltage
}

// Refer to one port of a given RPM
message RPMInterface {
    RPMID id = 1;
    string port = 2;
}

message Switch {
    // serial_number or asset tag
    SwitchID id = 1;
    // Descriptive name if needed
    string name = 2;
    int32 available_ports = 3;
    // Just for record here, can be added later if needed
    // To be recorded: model, manufacturer
}

// Refer to one port of a given switch
message SwitchInterface {
    SwitchID id = 1;
    string port = 2;
}

message Drac {
    DracID id = 1;
    string mac_address = 2;
    SwitchInterface switch_interface = 3;
    string password = 4;
}

message KVMID {
    string value = 1;
}

message RPMID {
    string value = 1;
}

message SwitchID {
    string value = 1;
}

message DracID {
    string value = 1;
}